# metric-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: metric_definition_guide.md
examples/: basic_validation.py  custom_rules.py  transparency_metrics.yaml
metric_guard/: __init__.py  cli.py  config.py
metric_guard/alerts/: __init__.py  backend.py  console.py  escalation.py  slack.py
metric_guard/audit/: __init__.py  export.py  store.py
metric_guard/pulse/: __init__.py  anomaly.py  baseline.py  scheduler.py
metric_guard/registry/: __init__.py  graph.py  loader.py  metric.py  schema.py
metric_guard/rules/: __init__.py  base.py  completeness.py  consistency.py  custom.py  distribution.py  freshness.py  volume.py
tests/: test_alerts.py  test_audit.py  test_cli.py  test_pulse.py  test_registry.py  test_rules.py
